# autosar-can-vxl-adapter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sonar-project.properties
.github/workflows/: build.yml
cmake/: add-build-type-coverage.cmake
include/: Can_XLdriver.h  Can_XLdriver_Internal.hpp  Can_XLdriver_InternalTypes.hpp  Can_XLdriver_Types.h
mocks/: CMakeLists.txt
mocks/include/: CanIfMock.hpp  DetMock.hpp
mocks/src/: CMakeLists.txt  CanIfMock.cpp  DetMock.cpp
src/: CMakeLists.txt  Can_XLdriver.cpp  Can_XLdriver_Internal.cpp  main.cpp  xldriver.cpp
stubs/: CMakeLists.txt
stubs/include/: CanIf_Can.h  Can_GeneralTypes.h  ComStack_Cfg.h  ComStack_Types.h  Compiler.h  CompilerDefinition.h  Compiler_Cfg.h  Det.h  PlatformTypes.h  Platform_Types.h  StandardTypes.h  Std_Types.h
stubs/src/: CMakeLists.txt  CanIf.c  Det.c
tests/: CMakeLists.txt
tests/src/: CMakeLists.txt  Tests.cpp
tools/: vector_hardware_settings.vaset
tools/python-can-listener/: main.py
vxlapi/: CMakeLists.txt  vxlapi.h
